--- a/tinyid-server/src/main/resources/online/application.properties
+++ b/tinyid-server/src/main/resources/online/application.properties
@@ -1,18 +1,12 @@
-#online
-server.port=9999
-server.context-path=/tinyid
+#\u914d\u7f6e\u8bf7\u6c42\u5934
+spring.profiles.active=dev
 
-batch.size.max=100000
+#\u662f\u5426\u663e\u793a\u542f\u52a8banner
+spring.main.banner-mode=CONSOLE
 
-datasource.tinyid.names=primary
-#datasource.tinyid.names=primary,secondary
+#debug\u6a21\u5f0f
+debug=false
 
-datasource.tinyid.primary.driver-class-name=com.mysql.jdbc.Driver
-datasource.tinyid.primary.url=jdbc:mysql://localhost:3306/db1?autoReconnect=true&useUnicode=true&characterEncoding=UTF-8
-datasource.tinyid.primary.username=root
-datasource.tinyid.primary.password=123456
-
-#datasource.tinyid.secondary.driver-class-name=com.mysql.jdbc.Driver
-#datasource.tinyid.secondary.url=jdbc:mysql://localhost:3306/db2?autoReconnect=true&useUnicode=true&characterEncoding=UTF-8
-#datasource.tinyid.secondary.username=root
-#datasource.tinyid.secondary.password=123456
+#\u65e5\u5fd7
+logging.level.root=INFO
+logging.level.org.springframework.web=INFO
